Query Inputs: Fix text field overlapping submit buttons.

--- a/src/styles/input-groups.less
+++ b/src/styles/input-groups.less
@@ -72,15 +72,15 @@
   
     input[type="text"] {
       float: left;
-      width: calc(100% ~'+' 24px); // 24px = width of .loader-mini
       padding-left: 12px;
       border-bottom-right-radius: 0;
       border-top-right-radius: 0;
     }
     
     .input-group-addon { // Loader wrapper
-      position: relative;
-      top: 0;
+      position: relative; // Can't use absolute because we need loader position to be relative to text field.
+      float: left;
+      margin-left: -24px; // Make text field stretch all the way to the submit btn. 24px = width of .loader-mini
     }
   }
 }
